# advent-of-code

python/2015/day-1/: main.py
python/2015/day-2/: main.py
python/2015/day-3/: main.py
python/2015/day-4/: main.py
python/2015/day-5/: main.py
rust/aoc2015/: Cargo.toml
rust/aoc2015/day-1/src/: main.rs
rust/aoc2015/day-2/src/: main.rs
rust/aoc2015/day-3/src/: main.rs
rust/aoc2015/day-4/src/: main.rs
rust/aoc2015/day-5/src/: main.rs
rust/aoc2015/day-6/src/: main.rs
rust/aoc2024/: Cargo.toml
rust/aoc2024/day-1/src/: main.rs
rust/aoc2024/day-2/src/: main.rs
